Make styles for scrollbar global. Fix overflov for aside

--- a/src/app/shared/components/scroll-container/scroll-container.component.scss
+++ b/src/app/shared/components/scroll-container/scroll-container.component.scss
@@ -9,21 +9,7 @@
     padding: 0;
   }
 
-  &::-webkit-scrollbar {
-    width: 15px;
-  }
 
-  &::-webkit-scrollbar-track {
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: variables.$glass-lighter-bg;
-    border-radius: 25px;
-
-    &:hover {
-      background: variables.$glass-light-bg;
-    }
-  }
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
